--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# JPA Props
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/jokeservice?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
